<resources>
    <string name="app_name" translatable="false">OpenDNSUpdater</string>
    <string name="action_settings">Settings</string>
    <string name="app_version" translatable="false">v%s</string>
    <string name="current_interface">Current interface :</string>
    <string name="current_ipv4">Current IPv4 :</string>
    <string name="img_desc_logo">Logo of the application</string>
    <string name="btn_settings">Settings</string>
    <string name="img_refresh">Refresh</string>
    <string name="text_auto_update">Enable auto updater</string>
    <string name="text_enable_opendns_server">Enable OpenDNS server</string>
    <string name="text_enable_notifications">Enable notifications</string>
    <string name="img_status">status</string>
    <string name="text_ip_adress_updated">Ip Address updated</string>
    <string name="text_using_opendns_servers_dns">Forcing OpenDNS servers</string>
    <string name="text_tests">TESTS</string>
    <string name="text_quick_options">Quick options</string>
    <string name="text_not_known">NA</string>
    <string name="text_filtering_phishing_sites">Filtering Phishing Sites</string>
    <string name="title_activity_global_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string-array name="list_preference_networks_blacklist">
        <item>MOBILE</item>
        <item>WIFI</item>
        <item>ETHERNET</item>
    </string-array>
    <string-array name="list_preference_types">
        <item>Black list</item>
        <item>White list</item>
    </string-array>
    <string-array name="list_preference_types_values">
        <item>BLACKLIST</item>
        <item>WHITELIST</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="ip_address_updated">Your IP has successfully been updated</string>
    <string name="title_ip_adress_updated">Ip address Updated</string>
    <string name="ip_address_updated_error">An error occurred while updating your IP. \nYou may not be using OpenDNS service right now.</string>
    <string name="title_ip_update_error">An error occurred while updating your IP</string>
    <string name="dns1_opendns_ip" translatable="false">208.67.222.222</string>
    <string name="dns2_opendns_ip" translatable="false">208.67.220.220</string>
    <string name="text_opendns_website_check">OpenDNS website check</string>
    <string name="button_text_activate">Activate</string>
    <string name="button_text_deactivate">Deactivate</string>
    <string name="server_opendns_primary">OpenDNS Primary</string>
    <string name="server_opendns_secondary">OpenDNS Secondary</string>
    <string name="notice_activated">OpenDNS forward is activated.</string>
    <string name="notice_queries">DNS query times:</string>
    <string name="quick_toggle">Toggle</string>
    <string name="settings_server">Server Settings</string>
    <string name="primary_server">Primary DNS server</string>
    <string name="secondary_server">Secondary DNS server</string>
    <string name="settings_system">System Settings</string>
    <string name="settings_boot">Activate on Boot</string>
    <string name="settings_notification">Show Notification</string>
    <string name="title_activity_enable_disable_vpnservice">ActivityEnableDisableVPNService</string>
    <string name="activate_opendns">Activate OpenDNS</string>
    <string name="deactivate_opendns">Deactivate OpenDNS</string>
    <string name="deactivate_activate_opendns">Activate/Deactivate OpenDNS</string>
    <string name="main_activity_last_ip_update">Last online IP udpate : %s</string>
    <string name="text_never">never</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_filter_clear">app.preferences.filter.clear</string>
    <string name="preference_filter_add">app.preferences.filter.add</string>
    <string name="app_about_licenses_ipify_api" translatable="false">https://github.com/rdegges/ipify-api/blob/master/LICENSE/</string>
    <string name="app_about_licenses_firebase_jobdispatcher" translatable="false">https://github.com/rdegges/ipify-api/blob/master/LICENSE/</string>
    <string name="app_about_licenses_pcap4j_core" translatable="false">https://github.com/kaitoy/pcap4j/blob/pcap4j-1.7.3/LICENSE</string>
    <string name="app_about_licenses_pcap4j_packetfactory" translatable="false">https://github.com/kaitoy/pcap4j/blob/pcap4j-1.7.3/LICENSE</string>
    <string name="app_about_licenses_minidns_minidns_client" translatable="false">https://github.com/MiniDNS/minidns/blob/0.3.3/LICENCE</string>
    <string name="app_about_licenses_google_gson" translatable="false">https://github.com/google/gson/blob/gson-parent-2.8.5/LICENSE</string>
    <string name="app_about_licenses_okhttp_okhttp3" translatable="false">https://github.com/square/okhttp/blob/parent-3.11.0/LICENSE.txt</string>
    <string name="app_about_licenses_greenrobot_eventbus" translatable="false">https://github.com/greenrobot/EventBus/blob/V3.1.1/LICENSE</string>
    <string name="app_about_licenses_bugsnag_bugsnag_android" translatable="false">https://github.com/bugsnag/bugsnag-android/blob/v4.9.3/LICENSE.txt</string>
    <string name="app_about_licenses_spotlight" translatable="false">https://github.com/wooplr/Spotlight/blob/master/LICENSE</string>
    <string name="app_about_licenses_app_intro" translatable="false">https://github.com/AppIntro/AppIntro/blob/master/LICENSE</string>
    <string name="app_intro_welcom_title">Welcome</string>
    <string name="text_how_it_works">This application is a utility tool that update your IP address on OpenDNS service. \n\n
        OpenDNS offers a configurable filtering solution for categories of website only using DNS.\n The content is filtered based on DNS request.
        It means that you must have OpenDNS DNS servers configured inside your router, your DHCP server or in the device IP configuration or using the built-in VPN server (It will redirect all DNS trafic to OpenDNS server and and forward everything else). \n\n
        The service rely on the external IP address. That means that if you move or change wifi network, filters wont be applied anymore.
        You must change your IP inside the OpenDNS dashboard.\n\n This application simplifies that process and does that for you.
        A local VPN server is built in if you can\'t change the IP configuration.</string>
    <string name="spotlight_title_auto_update_switch">Control updates</string>
    <string name="spotlight_title_start_vpn_server">Built-in VPN Server/Client</string>
    <string name="spotlight_title_show_notifications">Control your notifications</string>
    <string name="spotlight_title_state_switcher_ip_updated">Has the update worked ?</string>
    <string name="spotlight_title_state_switcher_using_opendns_server">Are you using OpenDNS servers ?</string>
    <string name="spotlight_title_state_switcher_is_filtering">Are filters working ?</string>
    <string name="spotlight_title_state_switcher_using_vpn_service">Is the internal VPN used ?</string>
    <string name="spotlight_title_top_button_refresh_all">No update ? Force it !</string>
    <string name="spotlight_title_top_button_settings">Settings</string>
    <string name="spotlight_content_auto_update_switch">With a simple touch, the automatic update action can be disabled</string>
    <string name="spotlight_content_start_vpn_server">You cannot setup OpenDNS servers in your IP configuration ?
        With a simple touch, you can enable the internal VPN that will makes everything for you</string>
    <string name="spotlight_content_show_notifications">Too much useless notifications ? No problem you can enable or disable the one that are coming from this app !</string>
    <string name="spotlight_content_state_switcher_ip_updated">You see a green check ? It means that the app is correctly configured and the IP has been updated</string>
    <string name="spotlight_content_state_switcher_using_opendns_server">If you see a cross, you probably need to use the internal VPN</string>
    <string name="spotlight_content_state_switcher_is_filtering">A green check mean that phishing websites are filtered.  That\'s good !</string>
    <string name="spotlight_content_state_switcher_using_vpn_service">You will see a green check if the internal VPN is started and used.</string>
    <string name="spotlight_content_top_button_refresh">You need manual things ? To force a manual refresh, click here !</string>
    <string name="spotlight_content_top_button_settings">Here are the settings. Check them to see what they contains</string>
    <string name="text_Ok">Ok</string>
    <string name="alert_password_title">Special character warning</string>
    <string name="alert_password_message">
<![CDATA[
Some special characters ( for the moment, only \'&\' is concerned ) are known to not be supported by OpenDNS public API.

Please make sure your password does not contain one of them.

This information has been confirmed by a member of OpenDNS staff.
]]></string>
    <string name="intro_title_opendns_account">OpenDNS account</string>
    <string name="intro_account_main_text">This application is using OpenDNS services whitch require you to have an account on their servers. Please choose your situation.</string>
    <string name="intro_account_chooser_have_account">I have an Account</string>
    <string name="intro_account_chooser_dont_have_account">I don\'t have an account</string>
    <string name="intro_title_bugsnag_crash_collection">Bugsnag Crash collection</string>
    <string name="intro_main_text_bugsnag_crash_collection">In order to help me (the developper) improve this application when it crashes, I\'ve setup bugsnag collection system.    When a crash occur, it collect and send a bunch of information about your device (OS, CPU, time, brand and model, orientation, network type, memory usage and battery level) and the application state (last actions, app version, app name, durations)    If you dont want to share these information, it is your choice and I\'ll respect it.</string>
    <string name="intro_text_switch_bugnsag_crash_collection">Enable BugSnag data collection on crash</string>
    <string name="intro_title_how_it_works">How it works ?</string>
    <string name="intro_button_test_credentials">Test connection</string>
    <string name="intro_hint_network_credentials_edit_text">Network</string>
    <string name="intro_hint_password_credentials_edit_text">Password</string>
    <string name="intro_hint_username_credentials_edit_text">Username</string>
    <string name="intro_main_text_credentials">Please fill in your OpenDNS credentials.</string>
    <string name="intro_opendns_account_credentials">OpenDNS account</string>
    <string name="intro_snackbar_invalid_credentials">Impossible to connect with the filled account</string>
    <string name="intro_welcome_main_text">Welcome to OpenDNS Updater The following steps will help you to configure the application</string>
    <string name="intro_permissions_title">Permissions</string>
    <string name="intro_permissions_main_text">You can optionally give to app the coarse location permission. It will only be used to access the wifi network name</string>
    <string name="intro_account_creation_1_title">1. Create your account</string>
    <string name="intro_account_creation_1_main_text">First go to signup.opendns.com/homefree and  fill in the form</string>
    <string name="intro_account_creation_2_title">2. Log into your account</string>
    <string name="intro_account_creation_2_main_text">Then login to dashboard.opendns.com</string>
</resources>