<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="settingsServer"
        android:title="@string/settings_server">

        <ListPreference
            android:defaultValue="0"
            android:key="primary_server"
            android:title="@string/primary_server"></ListPreference>

        <ListPreference
            android:defaultValue="1"
            android:key="secondary_server"
            android:title="@string/secondary_server"></ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="settings_system"
        android:title="@string/settings_system">

        <SwitchPreference
            android:defaultValue="false"
            android:key="settings_boot"
            android:title="@string/settings_boot" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="settings_notification"
            android:title="@string/settings_notification" />
    </PreferenceCategory>

</PreferenceScreen>
