<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/appIntroBottomBarHeight">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/intro_opendns_account_credentials"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/intro_main_text_credentials"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editOpenDnsUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intro_hint_username_credentials_edit_text"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:theme="@style/TextLabel">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editOpenDnsPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intro_hint_password_credentials_edit_text"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:theme="@style/TextLabel">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editOpenDnsNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/intro_hint_network_credentials_edit_text"
                android:inputType="textNoSuggestions"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ProgressBar
                android:id="@+id/progressBar_ip_updated"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="34dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_status_ip_updated"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_alignStart="@+id/progressBar_ip_updated"
                android:layout_alignLeft="@+id/progressBar_ip_updated"
                android:layout_alignEnd="@+id/progressBar_ip_updated"
                android:layout_alignRight="@+id/progressBar_ip_updated"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:contentDescription="@string/img_status"
                app:srcCompat="@drawable/ic_check_green_24dp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/testCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_button_test_credentials"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorPrimaryDark" />


    </LinearLayout>

</LinearLayout>
